--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "immunitet.js",
-  "version": "1.4.3",
+  "version": "1.5.0",
   "description": "",
   "main": "index.js",
   "author": "",
@@ -20,7 +20,7 @@
     "mocha": "^4.0.1"
   },
   "scripts": {
-    "compile": "babel lib --out-dir src",
+    "compile": "babel src --out-dir compiled",
     "start": "node --harmony index.js",
     "mocha": "mocha --require babel-core/register",
     "testd": "mocha -R spec --require babel-core/register --recursive ./test/",
