--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "compile": "babel src --out-dir compiled",
     "start": "node --harmony index.js",
     "mocha": "mocha --require babel-core/register",
-    "testd": "mocha -R spec --require babel-core/register --recursive ./test/",
-    "test": "mocha --require babel-core/register --recursive ./test/"
+    "testr": "mocha -R spec --require babel-core/register --recursive ./test/",
+    "test": "mocha --require babel-core/register ./test/"
   }
 }
