--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "immunitet.js",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "description": "",
   "main": "index.js",
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "11": "0.0.1"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.0.1"
   },
   "scripts": {
     "start": "node --harmony index.js",
-    "test":  "mocha ./test/"
+    "test": "mocha ./test/"
   }
 }
